--- a/src/main/resources/templates/studentInfo/studentRegistration.html
+++ b/src/main/resources/templates/studentInfo/studentRegistration.html
@@ -6,7 +6,7 @@
 </th:block>
 
 <th:block layout:fragment="article">
-      <div th:if="${studentInfo} == null">
+      <div th:if="${session.studentInfo} == null">
         <div class="container-fluid">
         <div class="card bg-light mt-3">
           <div class="card-header bg-light">
