--- a/src/main/resources/templates/board/boardUpdate.html
+++ b/src/main/resources/templates/board/boardUpdate.html
@@ -33,10 +33,10 @@
             <button type="button" class="btn btn-secondary" onclick="cancel()">취소</button>
           </div>
           <div class="form-group">
-              <input type="hidden" name = "sid" id = "sid" class="form-control" th:value="${studentInfo.getSid()}" required="required" readonly/>
+              <input type="hidden" name = "sid" id = "sid" class="form-control" th:value="${session.studentInfo.getSid()}" required="required" readonly/>
           </div>
           <div class="form-group">
-              <input type="hidden" name = "nickname" id = "nickname" class="form-control" th:value="${studentInfo.getNickname()}" required="required" readonly/>
+              <input type="hidden" name = "nickname" id = "nickname" class="form-control" th:value="${session.studentInfo.getNickname()}" required="required" readonly/>
           </div>
         </form>
       </div>
@@ -92,7 +92,7 @@
         $(function (){		// ckeditor config
             CKEDITOR.replace('content', {
                 filebrowserUploadUrl: '/mine/imageUpload.do?' + "board=" + "board" + "&boardtype=" + type 
-                		+ "&sid=" + "[[${studentInfo.getSid()}]]" + "&nickname=" + "[[${studentInfo.getNickname()}]]"
+                		+ "&sid=" + "[[${session.studentInfo.getSid()}]]" + "&nickname=" + "[[${session.studentInfo.getNickname()}]]"
             });
         });
     </script>
