--- a/src/main/resources/templates/fragments/body.html
+++ b/src/main/resources/templates/fragments/body.html
@@ -3,8 +3,8 @@
 	<body th:fragment="main-body">
 	
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark text-center">
-  			<a class="navbar-brand" th:if="${studentInfo} == null" href="/yu/index">나만 따라 YU</a>
-  			<a class="navbar-brand" th:unless="${studentInfo} == null" href="/yu/login">나만 따라 YU</a>
+  			<a class="navbar-brand" th:if="${session.studentInfo} == null" href="/yu/index">나만 따라 YU</a>
+  			<a class="navbar-brand" th:unless="${session.studentInfo} == null" href="/yu/login">나만 따라 YU</a>
   			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
     			<span class="navbar-toggler-icon"></span>
   			</button>
@@ -40,7 +40,7 @@
           					<button class="btn glass" type="submit"><img th:src="@{/images/돋보기.png}" width="100%"></button>
         				</form>
       				</li>
-      				<li th:if="${studentInfo} == null">
+      				<li th:if="${session.studentInfo} == null">
         				<form class="form-signin" method="post" action="/loginProcess" style="margin:auto;">
           					<label for="username" class="sr-only">Student Number</label>
           					<input type="text" name="username" id="usernameM" class="form-control" placeholder="학번을 입력해주세요" required autofocus>
@@ -53,10 +53,11 @@
           					</button>
         				</form>
       				</li>
-      				<li th:unless="${studentInfo} == null">
+      				<li th:unless="${session.studentInfo} == null">
             			<form class="form-signin" style="margin:auto;">
-              				
-              				<div style="color: white">[[${studentInfo.getNickname()}]] 님 환영합니다!!!</div>
+              				<img th:if="${session.folderName} != null" style="width:70px;height:90px;" th:src="@{/images/profiles/} + ${session.folderName} + '/'  + 'profileImage.png'" class="card-img">
+                    		<img th:unless="${session.folderName} != null" style="width:width:70px;height:90px;" src="http://placehold.it/70x90/" class="card-img">
+              				<div style="color: white">[[${session.studentInfo.getNickname()}]] 님 환영합니다!!!</div>
               				<button class="btn btn-sm btn-block btn-outline-light" type="button" onclick="location.href='/yu/studentInfo/studentInfo'">내정보</button>
               				<button class="btn btn-sm btn-block btn-danger" type="button" onclick="location.href='/yu/logout'">로그아웃</button>
             			</form>
@@ -68,8 +69,8 @@
 		
 		<div class="row flex">
   			<div class="col-2 item">
-    			<a th:if="${studentInfo} == null" href="/yu/index"><img th:src="@{/images/영대마크.png}"></a>
-    			<a th:unless="${studentInfo} == null" href="/yu/login"><img th:src="@{/images/영대마크.png}"></a>
+    			<a th:if="${session.studentInfo} == null" href="/yu/index"><img th:src="@{/images/영대마크.png}"></a>
+    			<a th:unless="${session.studentInfo} == null" href="/yu/login"><img th:src="@{/images/영대마크.png}"></a>
   			</div>
   			<div class="col-7 item">
     			<form class="input-group">
@@ -78,7 +79,7 @@
     			</form>
   			</div>
   			<div class="col-3 item">
-    			<form th:if="${studentInfo} == null" class="form-signin" method="post" action="/loginProcess" style="margin:auto;">
+    			<form th:if="${session.studentInfo} == null" class="form-signin" method="post" action="/loginProcess" style="margin:auto;">
       				<label for="username" class="sr-only">Student Number</label>
       				<input type="text" name="username" id="username" class="form-control" placeholder="학번을 입력해주세요." required autofocus>
       				<label for="password" class="sr-only">Password</label>
@@ -89,9 +90,10 @@
           			비밀번호 찾기
           			</button>
     			</form>
-            	<form th:unless="${studentInfo} == null" class="form-signin" style="margin:auto;">
-              		
-              		<div style="color:black">[[${studentInfo.getNickname()}]] 님 환영합니다!!!</div>
+            	<form th:unless="${session.studentInfo} == null" class="form-signin" style="margin:auto;">
+              		<img th:if="${session.folderName} != null" style="width:70px;height:90px;width:25%" th:src="@{/images/profiles/} + ${session.folderName} + '/'  + 'profileImage.png'" class="card-img">
+                    <img th:unless="${session.folderName} != null" style="width:width:70px;height:90px;" src="http://placehold.it/70x90/" class="card-img">
+              		<div style="color:black">[[${session.studentInfo.getNickname()}]] 님 환영합니다!!!</div>
               		<button class="btn btn-sm btn-block btn-outline-dark" type="button" onclick="location.href='/yu/studentInfo/studentInfo'">내정보</button>
               		<button class="btn btn-sm btn-block btn-danger" type="button" onclick="location.href='/yu/logout'">로그아웃</button>
             	</form>
