--- a/src/main/resources/templates/search/searchMatchingList.html
+++ b/src/main/resources/templates/search/searchMatchingList.html
@@ -44,7 +44,7 @@
         		Total <b style="color:red">[[${matchingList.getTotalPages()}]]</b> Pages / <b style="color:red">[[${matchingList.getTotalElements()}]]</b> Elements
         	</div>
 			<div class="float-left">
-				<a class="btn btn-primary" th:if="${studentInfo} != null" type="button" onClick="insertMatchingBoard()" role="button">글쓰기</a>
+				<a class="btn btn-primary" th:if="${session.studentInfo} != null" type="button" onClick="insertMatchingBoard()" role="button">글쓰기</a>
 			</div>
         </div>    
 
