--- a/src/main/resources/templates/matching/matchingUpdate.html
+++ b/src/main/resources/templates/matching/matchingUpdate.html
@@ -81,9 +81,15 @@
             });
             return false;
         }
-        var a=[[${matching.getBoardtype()}]];
-        $("#"+a).attr("selected","selected");
+        var boardTypeName =[[${matching.getBoardtype()}]];
+        $("#" + boardTypeName).attr("selected","selected");
 
+        $(function (){		// ckeditor config
+            CKEDITOR.replace('content', {
+                filebrowserUploadUrl: '/mine/imageUpload.do?' + "board=" + "matching" + "&boardtype=" + boardTypeName 
+                		+ "&sid=" + "[[${session.studentInfo.getSid()}]]" + "&nickname=" + "[[${session.studentInfo.getNickname()}]]"
+            });
+        });
     </script>
 </th:block>
 </html>
